--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -26,6 +26,9 @@
             </group>
         </dependencies>
         <releaseNotes>
+1.1
+Simplifying API calls
+            
 1.0
 Initial Release
         </releaseNotes>
