--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -17,8 +17,9 @@
             <dependency id="Newtonsoft.Json" version="[6, 7)" />
         </dependencies>
         <releaseNotes>
-1.0.1
+1.1
 Lazy load a few properties so that they can be used in viewmodel injection before xamarin forms has initialized its Forms.Context on droid
+iOS module will no longer clear or remove system settings
 
 1.0
 Initial Release
