--- a/Acr.XamForms.SignaturePad/Acr.XamForms.SignaturePad.csproj
+++ b/Acr.XamForms.SignaturePad/Acr.XamForms.SignaturePad.csproj
@@ -64,12 +64,12 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="AbstractSignatureService.cs" />
     <Compile Include="DrawPoint.cs" />
     <Compile Include="ISignatureService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignatureResult.cs" />
     <Compile Include="SignaturePadConfiguration.cs" />
-    <Compile Include="SignatureService.cs" />
     <Compile Include="Views\SignaturePadPage.xaml.cs">
       <DependentUpon>SignaturePadPage.xaml</DependentUpon>
     </Compile>
