File system management - why?  because I needed something more powerful than other fs libraries and something that wasn't 100% async

--- a/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
+++ b/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
@@ -41,9 +41,12 @@
     <Compile Include="AbstractMailService.cs" />
     <Compile Include="AbstractSettings.cs" />
     <Compile Include="IDeviceInfo.cs" />
+    <Compile Include="IO\IDirectory.cs" />
+    <Compile Include="IO\IFile.cs" />
     <Compile Include="IFileViewer.cs" />
     <Compile Include="ILogger.cs" />
     <Compile Include="INetworkService.cs" />
+    <Compile Include="IO\IFileSystem.cs" />
     <Compile Include="ISettings.cs" />
     <Compile Include="ISettingsDictionary.cs" />
     <Compile Include="ITextToSpeechService.cs" />
