--- a/Samples/Samples/Samples.csproj
+++ b/Samples/Samples/Samples.csproj
@@ -83,6 +83,9 @@
     <Compile Include="Views\SignaturePadConfigView.xaml.cs">
       <DependentUpon>SignaturePadConfigView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SignatureXamlView.xaml.cs">
+      <DependentUpon>SignatureXamlView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\SmsView.xaml.cs">
       <DependentUpon>SmsView.xaml</DependentUpon>
     </Compile>
@@ -204,6 +207,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\TextToSpeechView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\SignatureXamlView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
