--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -3,8 +3,8 @@
     <metadata>
         <id>Acr.XamForms.SignaturePad</id>
         <version>1.0.0</version>
-        <title>Xamarin Forms Signature Pad</title>
-        <description>Signature Pad for Xamarin Forms</description>
+        <title>Signature Pad for Xamarin.Forms</title>
+        <description>Signature Pad view renderer and service dialog for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
@@ -21,7 +21,7 @@ Initial Release
     </metadata>
     <files>
         <!-- PCL -->
-        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+sl50+wp8\Acr.XamForms.SignaturePad.dll" />
+        <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\portable-win+net45+MonoAndroid+MonoTouch+wp8\Acr.XamForms.SignaturePad.dll" />
 
         <!-- droid -->
         <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoAndroid\Acr.XamForms.SignaturePad.dll" />
@@ -32,6 +32,7 @@ Initial Release
         <file src="..\bin\Release\Portable\Acr.XamForms.SignaturePad.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.dll" />
         <file src="..\bin\Release\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" target="lib\MonoTouch\Acr.XamForms.SignaturePad.iOS.dll" />
         <file src="..\bin\Release\MonoTouch\SignaturePad.iOS.dll" target="lib\MonoTouch\SignaturePad.iOS.dll" />
+        <file src="Bootstrap\MobileBootstrap.cs.pp" target="content\MonoTouch\Bootstrap\SignaturePadBootstrap.cs.pp" />
         
         <!--winphone-->
         <!--TODO: manually build winphone library-->
