Add bootstrap to android to fix any linker issues

--- a/Samples/Samples.Android/Samples.Android.csproj
+++ b/Samples/Samples.Android/Samples.Android.csproj
@@ -86,6 +86,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrap\BarCodeScannerBootstrap.cs" />
+    <Compile Include="Bootstrap\MobileBootstrap.cs" />
+    <Compile Include="Bootstrap\SignaturePadBootstrap.cs" />
+    <Compile Include="Bootstrap\UserDialogsBootstrap.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
