--- a/Acr.XamForms/Acr.XamForms.csproj
+++ b/Acr.XamForms/Acr.XamForms.csproj
@@ -41,17 +41,17 @@
     <Compile Include="Collections\ObjectModel\ObservableDictionary.cs" />
     <Compile Include="Collections\ObjectModel\ObservableList.cs" />
     <Compile Include="Converters\BlobToImageSourceConverter.cs" />
+    <Compile Include="Converters\CreditCardConverter.cs" />
     <Compile Include="Converters\EllipsisConverter.cs" />
     <Compile Include="Converters\FileSizeConverter.cs" />
     <Compile Include="Converters\InverseBoolConverter.cs" />
+    <Compile Include="Converters\PhoneNumberConverter.cs" />
     <Compile Include="Converters\TimeAgoConverter.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Infrastructure\ViewModelResolver.cs" />
+    <Compile Include="Infrastructure\IViewModelResolver.cs" />
     <Compile Include="MarkupExtensions\TranslateMarkupExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\IMessageBus.cs" />
-    <Compile Include="Services\Impl\MessageBusImpl.cs" />
-    <Compile Include="Services\Impl\WeakSubscription.cs" />
-    <Compile Include="Services\MessageSubscriptionToken.cs" />
     <Compile Include="ViewModels\IViewModel.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Views\ListView.cs" />
@@ -68,6 +68,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.1.1.6206\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.1.1.6206\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
