--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms</id>
-        <version>1.0.2</version>
+        <version>1.1</version>
         <title>Acr.XamForms</title>
         <description>ACR utilities for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -15,6 +15,10 @@
             <dependency id="Xamarin.Forms" version="[1.1.1, 2.0)" />
         </dependencies>
         <releaseNotes>
+1.1
+New view model resolution
+More converters
+
 1.0
 Initial Release
         </releaseNotes>
