--- a/Acr.XamForms.SignaturePad.Droid/Acr.XamForms.SignaturePad.Droid.csproj
+++ b/Acr.XamForms.SignaturePad.Droid/Acr.XamForms.SignaturePad.Droid.csproj
@@ -12,7 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <TargetFrameworkVersion>v2.3</TargetFrameworkVersion>
+    <TargetFrameworkVersion>
+    </TargetFrameworkVersion>
     <SccProjectName>
     </SccProjectName>
     <SccLocalPath>
@@ -21,6 +22,7 @@
     <SccProvider>
     </SccProvider>
     <NuGetPackageImportStamp>3df6e65d</NuGetPackageImportStamp>
+    <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
