--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Acr.XamForms</id>
-        <version>1.1.1</version>
+        <version>1.1.3</version>
         <title>Acr.XamForms</title>
         <description>ACR utilities for Xamarin Forms</description>
         <authors>Allan Ritchie</authors>
@@ -18,6 +18,7 @@
 1.1
 New view model resolution
 More converters
+Adding lifecycle events
 
 1.0
 Initial Release
