--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -13,17 +13,16 @@
         <tags>xamarin forms dialogs</tags>
         <dependencies>
             <group>
-                <dependency id="Xamarin.Forms" version="[1.2.1, 2.0)" />
+                <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
             </group>
             <group targetFramework="wp8">
-                <dependency id="Coding4Fun.Toolkit.Controls" version="[2.0, 3.0)" />
+                <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
         <releaseNotes>
 2.0
 Create better method structure on main class
-NEW - Date/Time Dialog
-NEW - Duration Dialog
+WP dialogs are now driven by WP Toolkit
 NEW - Secure text prompt
 
 1.0
