--- a/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
+++ b/Acr.XamForms.UserDialogs/Acr.XamForms.UserDialogs.csproj
@@ -40,10 +40,10 @@
     <Compile Include="ActionSheetConfig.cs" />
     <Compile Include="AlertConfig.cs" />
     <Compile Include="ConfirmConfig.cs" />
-    <Compile Include="DateTimePromptConfig.cs" />
-    <Compile Include="DateTimePromptResult.cs" />
-    <Compile Include="DurationPromptConfig.cs" />
-    <Compile Include="DurationPromptResult.cs" />
+    <Compile Include="TODO\DateTimePromptConfig.cs" />
+    <Compile Include="TODO\DateTimePromptResult.cs" />
+    <Compile Include="TODO\DurationPromptConfig.cs" />
+    <Compile Include="TODO\DurationPromptResult.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="IUserDialogService.cs" />
     <Compile Include="IProgressDialog.cs" />
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ActionSheetOption.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
