--- a/nuspec/Acr.XamForms.SignaturePad.nuspec
+++ b/nuspec/Acr.XamForms.SignaturePad.nuspec
@@ -12,9 +12,12 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <tags>xamarin forms signaturepad</tags>
         <dependencies>
-            <dependency id="Xamarin.Forms" version="[1.1.1, 2.0)" />
+            <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
         </dependencies>
         <releaseNotes>
+1.0.1
+Update to Xamarin 1.2.1.6229
+
 1.0
 Initial Release
         </releaseNotes>
