--- a/nuspec/Acr.XamForms.UserDialogs.nuspec
+++ b/nuspec/Acr.XamForms.UserDialogs.nuspec
@@ -6,7 +6,7 @@
         <title>User Dialogs for Xamarin Forms</title>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
-        <description>Alert, Confirm, Prompt, Toast, Action Sheet, Loading, and Progress Dialogs calls for Xamarin Forms. Loading and Progress dialogs courtesy of AndHUD, BTProgressHUD, and Coding4Fun toolkit</description>
+        <description>Alert, Confirm, Prompt, Toast, Action Sheet, Loading, and Progress Dialogs calls for Xamarin Forms</description>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
         <projectUrl>https://github.com/aritchie/acr-xamarin-forms</projectUrl>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -16,6 +16,7 @@
                 <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
             </group>
             <group targetFramework="wp8">
+                <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
                 <dependency id="WPtoolkit" version="[4.2013.08.16, 5.0)" />
             </group>
         </dependencies>
