--- a/nuspec/Acr.XamForms.BarCodeScanner.nuspec
+++ b/nuspec/Acr.XamForms.BarCodeScanner.nuspec
@@ -16,18 +16,22 @@
                 <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
             </group>
             <group targetFramework="MonoAndroid">
+                <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.5, 2.0)" />
             </group>
             <group targetFramework="MonoTouch">
+                <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.5, 2.0)" />
             </group>
             <group targetFramework="wp8">
+                <dependency id="Xamarin.Forms" version="[1.2.1.6229, 2.0)" />
                 <dependency id="ZXing.Net.Mobile" version="[1.4.5, 2.0)" />
             </group>
         </dependencies>
         <releaseNotes>
 1.1.1
 Update to ZXing.Net.Mobile
+Fix minor nuspec issue
 
 1.1
 Simplifying API calls
