Setting up for mobile 1.3.  Several breaking changes

--- a/Samples/Samples/Samples.csproj
+++ b/Samples/Samples/Samples.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ViewModels\SmsViewModel.cs" />
     <Compile Include="ViewModels\TextToSpeechViewModel.cs" />
     <Compile Include="ViewModels\UserDialogViewModel.cs" />
+    <Compile Include="ViewModels\VideoViewModel.cs" />
     <Compile Include="Views\BarCodeView.xaml.cs">
       <DependentUpon>BarCodeView.xaml</DependentUpon>
     </Compile>
