--- a/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
+++ b/Acr.XamForms.Mobile/Acr.XamForms.Mobile.csproj
@@ -40,6 +40,11 @@
     <Compile Include="AbstractLogger.cs" />
     <Compile Include="AbstractMailService.cs" />
     <Compile Include="AbstractSettings.cs" />
+    <Compile Include="Media\CameraDevice.cs" />
+    <Compile Include="Media\AbstractOptions.cs" />
+    <Compile Include="Media\IMediaFile.cs" />
+    <Compile Include="Media\CameraOptions.cs" />
+    <Compile Include="Media\VideoOptions.cs" />
     <Compile Include="TODO\IAudioService.cs" />
     <Compile Include="IDeviceInfo.cs" />
     <None Include="TODO\IImage.cs" />
@@ -60,14 +65,13 @@
     <Compile Include="AbstractNetworkService.cs" />
     <Compile Include="NetworkStatusChangedEventArgs.cs" />
     <Compile Include="ObservableDictionary.cs" />
-    <Compile Include="Position.cs" />
-    <Compile Include="PositionErrorEventArgs.cs" />
-    <Compile Include="PositionEventArgs.cs" />
-    <Compile Include="ILocationService.cs" />
+    <Compile Include="Locations\Position.cs" />
+    <Compile Include="Locations\PositionErrorEventArgs.cs" />
+    <Compile Include="Locations\PositionEventArgs.cs" />
+    <Compile Include="Locations\IGeoLocator.cs" />
     <None Include="TODO\IMailService.cs" />
     <Compile Include="IPhoneService.cs" />
-    <Compile Include="IPhotoService.cs" />
-    <Compile Include="PhotoResult.cs" />
+    <Compile Include="Media\IMediaPicker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsDictionary.cs" />
     <Compile Include="SettingsExtensions.cs" />
