--- a/nuspec/Acr.XamForms.Mobile.nuspec
+++ b/nuspec/Acr.XamForms.Mobile.nuspec
@@ -16,7 +16,10 @@
             <dependency id="Newtonsoft.Json" version="[6.0.3, 7)" />
         </dependencies>
         <releaseNotes>
-1.2.1
+1.3
+Several bugfixes
+BREAKING: IPhotoService is now IMediaService and now matches Xamarin.Mobile API
+BREAKING: ILocationService is now IGeoLocator and now matches Xamarin.Mobile API
 Update to Xamarin.Forms 1.2.1.6229
 
 
