--- a/nuspec/Acr.XamForms.nuspec
+++ b/nuspec/Acr.XamForms.nuspec
@@ -4,7 +4,7 @@
         <id>Acr.XamForms</id>
         <version>1.2.0</version>
         <title>Acr.XamForms</title>
-        <description>ACR utilities for Xamarin Forms</description>
+        <description>View model lifecycle, view model/view resolution, utility converters, and more</description>
         <authors>Allan Ritchie</authors>
         <owners>Allan Ritchie</owners>
         <licenseUrl>http://opensource.org/licenses/ms-pl.html</licenseUrl>
